--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@ color: var(--accent-color);
     margin-right: auto;
 }
 
-.header-container, .header-list {
+.header-container, .header-list-1 {
     display: flex;
     align-items: center;
 }
@@ -105,46 +105,101 @@ color: var(--accent-color);
     color: var(--head-color);
 }
 
+.header-link :hover {
+    color: var(--accent-color)
+}
+
 .header-link :focus {
     color: var(--accent-color)
 }
 
-.header-link :hover {
+.header-tel :focus {
+    color: var(--accent-color)
+}
+
+.header-tel :hover {
     color: var(--accent-color);
 }
+
+.header-mail :focus {
+    color: var(--accent-color)
+}
+
+.header-mail :hover {
+    color: var(--accent-color);
+}
+
 
 .header-link:not(:last-child) {
     margin-right: 50px;
 }
 
-.header-tel {
 
-    margin-left: 30px;
+
+.header-list-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
 }
 
-.header-tel, .header-mail {
-font-weight: 500;
+.header-list-2-item {
+
+    fill: #2196F3;
+}
+
+
+
+.header-mail {
+    font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--text-color);
+order: 0;
 }
 
 
-.header-tel:focus,
-.header-tel:hover {
-    color: var(--accent-color);
+.header-mail-icon {
+    fill: #757575;
+    margin-right: 10px;
 }
-
 
 .header-mail:focus,
 .header-mail:hover {
     color: var(--accent-color);
 }
 
-.header-icon {
-    fill: #757575;
+.header-list-2 :focus .header-mail-icon,
+.header-list-2 :hover .header-mail-icon {
+    fill: #2196F3;
 }
+
+.header-tel {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--text-color);
+    }
+    
+    
+    .header-tel:focus,
+    .header-tel:hover {
+        color: var(--accent-color);
+    }
+    
+    .header-tel-icon {
+    fill: #757575;
+    margin-right: 10px;
+    }
+    
+    .header-tel :focus .header-tel-icon,
+    .header-list-2 :hover .header-tel-icon {
+        fill: #2196F3;
+    }
+        
+
 
 .hero {
     background-color: var(--background-color);
@@ -237,6 +292,10 @@ color: var(--text-color);
     margin-right: 30px;
 }
 
+.section-1-pic {
+    margin-bottom: 30px;
+}
+
 .section-2 {
     padding-bottom: 94px;
 }
@@ -289,7 +348,7 @@ letter-spacing: 0.03em;
 
     background-color: var(--main-light-color);
     border-radius: 5px;
-    box-shadow: 1px 2px 5px gray;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 
@@ -413,6 +472,7 @@ padding: 6px 22px 6px;
 .filter-btn:hover {
 color: var(--main-light-color);
 background-color: var(--accent-color);
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .filter-title {
@@ -453,6 +513,11 @@ border-bottom: 1px solid #EEEEEE;*/
    
 }
 
+.card-list-element:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    cursor: pointer;
+}
+
 .image {
     display: block;
 }
@@ -476,6 +541,7 @@ line-height: 1.19;
 letter-spacing: 0.03em;
 
 color: var(--accent-color);
+max-height: 31px;
 
 }
 
@@ -488,7 +554,11 @@ color: var(--accent-color);
     color: var(--main-light-color);
 }
 
-
+.footer-list {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column
+}
 
 .footer-location {
 font-weight: 400;
@@ -514,3 +584,59 @@ color: var(--footer-contact-color);
 margin-top: 9px;
 }
 
+.footer-stuff {
+    display: flex;
+    gap: 70px;
+    align-items: baseline;
+}
+
+.footer-soc {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.footer-soc-title {
+    font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+font-style: normal;
+text-transform: uppercase;
+color: var(--main-light-color);
+}
+
+.footer-soc-list {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.footer-soc-list-link {
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.1);
+    margin-top: 20px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
+    
+}
+
+.footer-soc-list-icon{
+    fill: #FFFFFF;
+}
+
+.footer-soc-list-link:hover, .footer-soc-list-link:focus {
+    background-color: #2196F3;
+}
+
+
+.footer-soc-list-link:hover .footer-soc-list-icon,
+.footer-soc-list-link:focus .footer-soc-list-icon {
+    fill: #FFFFFF;
+}
